src/test/resources/scripts/language/parser/invalid/coercion/arithmetic/negativeSupplierFunction.sbsc
// this function returns type NUM, we should not be able to negate it

-(): num -> 0.4;

return false;